tests/semantic_cases/valid/procedure_local_var_shadow_type.ob0
MODULE Main;
TYPE Count = REAL;
PROCEDURE P;
VAR Count: INTEGER;
BEGIN
  Count := 1;
  WriteInt(Count)
END P;
BEGIN
  P
END Main.
