tests/semantic_cases/invalid/procedure_local_var_self_shadows_type_alias.ob0
(* INVALID: procedure-local variable reuses a type alias name in its own declaration (Count: Count) *)
MODULE Main;
TYPE Count = INTEGER;
PROCEDURE P;
VAR Count: Count;
BEGIN
END P;
BEGIN
  P
END Main.
